<resources>
    <string name="app_name">SendMeal</string>
    <string name="TextView">Productos</string>
    <string name="nombre">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="passwordCheck">Repetir Contraseña</string>
    <string name="email">Email</string>
    <string name="numeroTarjeta">Numero de tarjeta</string>
    <string name="CBU">CBU</string>
    <string name="aliasCBU">Alias CBU</string>
    <string name="CCV">CCV</string>
    <string name="tipoDeTarjeta">Tipo de tarjeta</string>
    <string name="terminosYcondiciones">Acepto los terminos y condiciones</string>
    <string name="registrar">Registrar</string>
    <string name="creditoInicial">Credito inicial</string>
    <string name="realizarCargaInicial">¿Realizar carga inicial?</string>
    <string name="credito">Credito</string>
    <string name="debito">Debito</string>
    <string name="fechaVencimiento">Fecha de Vencimiento</string>

    <string name="google_maps_key">AIzaSyDM6JI2GDHfaymWL_0xuDyW3E5QFxQ6ZBw</string>

    <string name="foto">Foto</string>

    <string name="nuevoPlato">Nuevo Plato</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo">Título</string>
    <string name="precio">Precio</string>
    <string name="calorias">Calorías</string>
    <string name="guardar">Guardar</string>

    <string name="nuevo_pedido">Nuevo Pedido</string>

    <string name="correo">Correo</string>
    <string name="direccion">Direccion</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>

    <string name="txt_view_bienvenido">Bienvenidos</string>

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
    </string-array>
</resources>
