<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.NewDish">

    <TextView
        android:id="@+id/view_titulo"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/nuevoPlato"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/titulo" />


    <EditText
        android:id="@+id/edit_descripcion"
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:singleLine="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/precio" />

        <EditText
            android:id="@+id/edit_calorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/calorias" />


    </LinearLayout>

    <Button
        android:id="@+id/button_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/button_agregar_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:onClick="openCamera"/>

</LinearLayout>