<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#177761"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"  />

    <EditText
        android:id="@+id/editText_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:entries="@array/tiposEnvios" />

    <TextView
        android:id="@+id/textView_monto"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="TextView"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_listaPlatos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_agregarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAgregarPlato"
        android:text="@string/agregar_plato" />

    <Button
        android:id="@+id/button_confirmarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onConfirmarPedido"
        android:text="@string/confirmar_pedido" />

</LinearLayout>